syntax = 'proto3';

package UploadAndDownloadPackage;

service Upload {
    rpc UploadFile (UploadRequest) returns (UploadResponse) {}
    rpc UploadFileWithStream (stream UploadLargeRequest) returns (UploadResponse) {}
}

service Download {
    rpc DownloadFileWithStream (DownloadRequest) returns (stream DownloadResponse) {}
}

message UploadRequest {
    string fileName = 1;
    bytes fileContent = 2;
}

message UploadLargeRequest {
    string fileName = 1;
    bytes fileContent = 2;
}

message UploadResponse {
    string message = 1;
}

message DownloadRequest {
    string fileName = 1;
}

message DownloadResponse {
    bytes fileContent = 1;
}